src/main/openshift/deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  namespace: k8s3wrkshp
  name: k8s3wrkshp-demo
spec:
  selector:
    app: k8s3wrkshp-demo
  replicas: 3
  template:
    metadata:
      labels:
        app: k8s3wrkshp-demo
    spec:
      containers:
        - name: k8s3wrkshp-demo
          image: >-
            image-registry.openshift-image-registry.svc:5000/k8s3wrkshp/quarkus-k8s3wrkshp-native:latest
          ports:
            - containerPort: 8080
              protocol: TCP
      imagePullSecrets: []
  strategy:
    type: Rolling
    rollingParams:
      timeoutSeconds: 600
      updatePeriodSeconds: 1
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
  triggers:
    - type: ConfigChange
  paused: false
