src/main/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s3wrkshp-demo
  namespace: k8s3wrkshp
spec:
  selector:
    name: k8s3wrkshp-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
