src/main/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: k8s3wrkshp-demo
  namespace: k8s3wrkshp
  annotations:
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
spec:
  host: k8s3wrkshp-demo.apps.ocp4.klaassen.click
  to:
    kind: Service
    name: k8s3wrkshp-demo
  tls:
    termination: "edge"
